<resources>
    <string name="app_name">Hortonomi</string>
    <string name="hortonomi">Hortonomi</string>
    <string name="loginMain">KIRJAUDU</string>
    <string name="Nappi3ACT">3ACT</string>
    <string name="textviewA2">textviewA2</string>
    <string name="kotiA3">KOTI</string>
    <string name="kasvin_nimiA3">KASVIN NIMI</string>
    <string name="kasvin_lajiA3">KASVIN LAJI</string>
    <string name="hoito_ohjeetTextA3">HOITO-OHJEET</string>
    <string name="k_ytt_jien_kommentitA3">KÄYTTÄJIEN KOMMENTIT</string>
    <string name="kotiKommenttiA4">KOTI</string>
    <string name="kirjoita_kommenttiA4">Kirjoita kommentti</string>
    <string name="julkaiseKommenttiA4">JULKAISE</string>
    <string name="t_h_n_voit_kirjoittaa_kommentinA4">Tähän voit kirjoittaa kommentin</string>
    <string name="koti">KOTI</string>
    <string name="kirjoita_kommentti">Kirjoita kommentti</string>
    <string name="julkaise">JULKAISE</string>
    <string name="t_h_n_kirjoita_jotaki">Tähän voit kirjoittaa kommentin</string>
    <string name="KIRJOITA_KOMMENTTIA4">KIRJOITA KOMMENTTI</string>
    <string name="todo" />
    <string name="t_h_n_tulee_k_ytt_jien_kommentit">Tähän tulee käyttäjien kommentit</string>
    <string name="t_ss_lukee_hoito_ohjeita">Tässä lukee hoito-ohjeita</string>
    />
</resources>